# kit-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/compliance-matrix-test/: Cargo.toml
crates/compliance-matrix-test/src/: lib.rs
crates/compliance-matrix-test/tests/: matrix_check.rs
crates/synthonyx-kit/: Cargo.toml  README.md
crates/synthonyx-kit-audit/: Cargo.toml  README.md
crates/synthonyx-kit-audit/src/: lib.rs
crates/synthonyx-kit-audit/tests/: compliance_file_logger.rs  proptest_chain.proptest-regressions  proptest_chain.rs
crates/synthonyx-kit-compliance/: Cargo.toml  README.md
crates/synthonyx-kit-compliance/src/: lib.rs
crates/synthonyx-kit-compliance/tests/: compliance_classification.rs
crates/synthonyx-kit-core/: Cargo.toml  README.md
crates/synthonyx-kit-core/src/: audit.rs  config.rs  correlation.rs  dispatch.rs  error.rs  event.rs  get.rs  hooks.rs  lib.rs  origin.rs  pii.rs  secret.rs  time.rs
crates/synthonyx-kit-core/tests/: compile_fail.rs  compliance_audit_entry.rs  compliance_origin.rs  compliance_pii.rs  compliance_secret.rs  compliance_time.rs  proptest_correlation.rs
crates/synthonyx-kit-core/tests/compile-fail/: pii_display.rs  pii_display.stderr  secret_in_derive_struct.rs  secret_in_derive_struct.stderr  secret_serialize.rs  secret_serialize.stderr
crates/synthonyx-kit-macros/: Cargo.toml  README.md
crates/synthonyx-kit-macros/src/: lib.rs
crates/synthonyx-kit-password/: Cargo.toml  README.md
crates/synthonyx-kit-password/src/: argon2id.rs  lib.rs
crates/synthonyx-kit-password/tests/: compliance_argon2.rs
crates/synthonyx-kit-primitives/: Cargo.toml  README.md
crates/synthonyx-kit-primitives/src/: lib.rs
crates/synthonyx-kit-storage/: Cargo.toml  README.md
crates/synthonyx-kit-storage/src/: lib.rs
crates/synthonyx-kit-tracing/: Cargo.toml  README.md
crates/synthonyx-kit-tracing/src/: lib.rs
crates/synthonyx-kit-tracing/tests/: compliance_w3c.rs  proptest_w3c.rs
crates/synthonyx-kit/examples/: manual_runtime.rs
crates/synthonyx-kit/src/: lib.rs
docs/: architecture.md  compliance.md  glossary.md  release-process.md  standards.md  writing-an-rtm.md
docs/adr/: 0001-modular-runtime-architecture.md  0002-workspace-split.md  0003-afit-trait-variant.md  0004-serde-codec.md  0005-secret-and-pii-redaction.md  0006-cow-static-str-in-audit-entry.md  0007-config-binds-auditlogger.md  0008-tamper-evident-audit-chain.md  README.md
scripts/: tag.sh
src/: error.rs  lib.rs  primitives.rs
src/std/: password.rs
src/traits/: config.rs  dispatch.rs  get.rs  mod.rs  password.rs
