[workspace]
resolver = "3"
members = [
    "crates/synthonyx-kit",
    "crates/synthonyx-kit-core",
    "crates/synthonyx-kit-primitives",
    "crates/synthonyx-kit-storage",
    "crates/synthonyx-kit-audit",
    "crates/synthonyx-kit-compliance",
    "crates/synthonyx-kit-tracing",
    "crates/synthonyx-kit-password",
    "crates/synthonyx-kit-macros",
    "crates/compliance-matrix-test",
]

[workspace.package]
version = "0.2.0"
authors = ["Synthonyx Technologies Ltd <opensource@synthonyx.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/synthonyx/kit-rs"
categories = ["development-tools"]

[workspace.dependencies]
# Internal workspace crates
synthonyx-kit-core = { version = "0.2.0", path = "crates/synthonyx-kit-core" }
synthonyx-kit-primitives = { version = "0.2.0", path = "crates/synthonyx-kit-primitives" }
synthonyx-kit-storage = { version = "0.2.0", path = "crates/synthonyx-kit-storage" }
synthonyx-kit-audit = { version = "0.2.0", path = "crates/synthonyx-kit-audit" }
synthonyx-kit-compliance = { version = "0.2.0", path = "crates/synthonyx-kit-compliance" }
synthonyx-kit-tracing = { version = "0.2.0", path = "crates/synthonyx-kit-tracing" }
synthonyx-kit-password = { version = "0.2.0", path = "crates/synthonyx-kit-password" }
synthonyx-kit-macros = { version = "0.2.0", path = "crates/synthonyx-kit-macros" }

# External
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
blake3 = "1"
trait-variant = "0.1"
tracing = "0.1"
tokio = { version = "1", default-features = false }
http = "1"
argon2 = { version = "0.5", features = ["std", "rand"] }
hex = "0.4"

# Test-only
proptest = "1"
trybuild = "1"
static_assertions = "1.1"
regex = "1"
