[package]
name = "synthonyx-kit-audit"
description = "Tamper-evident audit logging for the Synthonyx Kit, with BLAKE3-chained entries and reference file/tracing sinks."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
synthonyx-kit-core = { workspace = true, features = ["serde"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
tracing.workspace = true
hex.workspace = true

[dev-dependencies]
proptest.workspace = true
