[package]
name = "synthonyx-kit-macros"
description = "Procedural macros for the Synthonyx Kit. Phase 1 stub; populated in Phase 3 with `compose_runtime!`."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
proc-macro = true
