[package]
name = "synthonyx-kit-primitives"
description = "Parameter-source macros and const-generic getter types for the Synthonyx Kit."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
synthonyx-kit-core.workspace = true
